feat: 收集插件添加保存与恢复

--- a/archieve/issuer/options.html
+++ b/archieve/issuer/options.html
@@ -26,17 +26,17 @@
         <div class="opt-item">
             <label for="token">密钥</label>
             <input type="password" id="token">
-            <button id="saveToken">保存</button>
         </div>
         <div class="opt-item">
             <label for="user">用户</label>
             <input type="user" id="user">
-            <button id="saveUser">保存</button>
         </div>
         <div class="opt-item">
             <label for="user">仓库</label>
             <input type="repo" id="repo">
-            <button id="saveRepo">保存</button>
+        </div>
+        <div class="opt-item">
+            <button id="saveButton" style="width: 50%;margin: 20px auto">保存</button>
         </div>
 
         <script src="options.js" defer></script>
