feat: 收集插件支持无token提交

--- a/archieve/issuer/options.html
+++ b/archieve/issuer/options.html
@@ -22,13 +22,17 @@
 </head>
 <body>
     <div class="opt">
-        <h2>输入github相关信息</h2>
+        <h2>请输入配置信息，任选其一</h2>
         <div class="opt-item">
-            <label for="token">密钥</label>
+            <label for="token">github密钥</label>
             <input type="password" id="token">
         </div>
         <div class="opt-item">
-            <button id="saveButton" style="width: 50%;margin: 20px auto">保存</button>
+            <label for="email">邮&nbsp;箱&nbsp;地&nbsp;址</label>
+            <input type="email" id="email">
+        </div>
+        <div class="opt-item">
+            <button id="saveButton" style="width: 100%;margin: 20px auto">保存</button>
         </div>
 
         <script src="options.js" defer></script>
