refactor: 手机插件消息提示去除弹框

--- a/archieve/issuer/popup.html
+++ b/archieve/issuer/popup.html
@@ -24,7 +24,7 @@
 
       .btn {
         flex-wrap: wrap;
-        margin: 10px auto;
+        margin: 2px auto;
         gap: 20px;
       }
       input,
@@ -125,12 +125,18 @@
           </svg>
         </div>
       </div>
+      <div class="opt">
+        <span id="tip" style="visibility: hidden;">:-)</span>
+      </div>
       <div class="btn" id="buttons">
         <button id="save">保存</button>
         <button id="restore">恢复</button>
         <button id="clear">清空</button>
         <button id="submit" >通过Token提交</button>
         <button id="submitByEmail" >通过邮箱提交</button>
+      </div>
+      <div class="help" style="width: 100%;" title="使用帮助">
+        <a href="https://github.com/WShihan/all-about-gis/blob/main/archieve/issuer/README.md" style="float: left; text-decoration: none;background-color: rgb(89, 87, 87);border-radius: 50%;" target="_blank">❔</a>
       </div>
     </div>
 
