--- a/archieve/issuer/popup.html
+++ b/archieve/issuer/popup.html
@@ -59,7 +59,8 @@
         padding: 5px;
         border-radius: 3px;
       }
-      #submit, #submitByEmail {
+      #submit,
+      #submitByEmail {
         background-color: rgb(135, 222, 135);
       }
       #clear {
@@ -126,17 +127,28 @@
         </div>
       </div>
       <div class="opt">
-        <span id="tip" style="visibility: hidden;">:-)</span>
+        <span id="tip" style="visibility: hidden">:-)</span>
       </div>
       <div class="btn" id="buttons">
         <button id="save">保存</button>
         <button id="restore">恢复</button>
         <button id="clear">清空</button>
-        <button id="submit" >通过Token提交</button>
-        <button id="submitByEmail" >通过邮箱提交</button>
+        <button id="submit">通过Token提交</button>
+        <button id="submitByEmail">通过邮箱提交</button>
       </div>
-      <div class="help" style="width: 100%;" title="使用帮助">
-        <a href="https://github.com/WShihan/all-about-gis/blob/main/archieve/issuer/README.md" style="float: left; text-decoration: none;background-color: rgb(89, 87, 87);border-radius: 50%;" target="_blank">❔</a>
+      <div class="help" style="width: 100%" title="使用帮助">
+        <a
+          href="https://github.com/WShihan/all-about-gis/blob/main/archieve/issuer/README.md"
+          style="
+            float: left;
+            text-decoration: none;
+            background-color: rgb(89, 87, 87);
+            border-radius: 50%;
+          "
+          target="_blank"
+        >
+          ❔
+        </a>
       </div>
     </div>
 
